Updated main layout

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="index.css">
   <title></title>
 </head>
 <body>
@@ -7,22 +8,32 @@
     <div id="date">
     </div>
     <div id="weather">
+      weather
     </div>
     <div id="contact">
+      contact
     </div>
   </nav>
-    <div id="userGmail">
+  <div id="mainContainer">
+    <div id="userGmail" class="containerGmail">
       <div id=login>
+        login
       </div>
       <div id="userInfo">
+        user info
       </div>
     </div>
-      <div id="devsInfo">
+    <div id="userEmails" class="containerEmails">
+      useremails
+    </div>
+      <div id="devsInfo" class="containerDev">
         <div id="firstDev">
+          dev1
         </div>
         <dev id="secondDev">
+          dev2
         </dev>
       </div>
-
+    </div>
 </body>
 </html>
