updated index.html Realated #1

--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
 <html>
+
 <head>
-<link rel="stylesheet" type="text/css" href="index.css">
+
+
+  <link rel="stylesheet" type="text/css" href="index.css">
   <title></title>
 </head>
+
 <body>
+
+
   <nav>
     <div id="date">
     </div>
+
     <div id="weather">
-      weather
+      <label for="temp">Tempe.</label>
+      <text name="temp"id="temp"></text>
+      <text>℃</text>
     </div>
+
+
+
+
     <div id="contact">
       contact
     </div>
   </nav>
+
+
+
   <div id="mainContainer">
     <div id="userGmail" class="containerGmail">
       <div id=login>
@@ -26,14 +42,17 @@
     <div id="userEmails" class="containerEmails">
       useremails
     </div>
-      <div id="devsInfo" class="containerDev">
-        <div id="firstDev">
-          dev1
-        </div>
-        <dev id="secondDev">
-          dev2
-        </dev>
+    <div id="devsInfo" class="containerDev">
+      <div id="firstDev">
+        dev1
       </div>
+      <dev id="secondDev">
+        dev2
+      </dev>
     </div>
+  </div>
+
+  <script src="./weather/weather.js"></script>
 </body>
+
 </html>
