--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
+
 <head>
-<link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="stylesheet" type="text/css" href="github/github.css">
+
   <title></title>
 </head>
+
 <body>
   <nav>
     <div id="date">
@@ -26,14 +30,39 @@
     <div id="userEmails" class="containerEmails">
       useremails
     </div>
-      <div id="devsInfo" class="containerDev">
-        <div id="firstDev">
-          dev1
+
+
+    <div id="devsInfo" class="containerDev">
+
+      <div class="grid-item" id="tamernasser" value="asd">
+        <a href="http://www.github.com/tamernasser">
+          <img src="" alt="avatar" class="avatar">
+        </a>
+        <div class="avatarName">
+          <p></p>
         </div>
-        <dev id="secondDev">
-          dev2
-        </dev>
+        <div class="avatarInfo">
+          <p></p>
+          <p></p>
+        </div>
       </div>
+
+      <div class="grid-item" id="majdya">
+        <a href="http://www.github.com/majdya"><img src="" alt="avatar" class="avatar"></a>
+        <div class="avatarName">
+          <p></p>
+        </div>
+        <div class="avatarInfo">
+          <p></p>
+          <p></p>
+        </div>
+      </div>
+
     </div>
+
+
+  </div>
+  <script type="text/javascript" src="./github/github_api.js"></script>
 </body>
+
 </html>
