--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div id="devsInfo" class="containerDev">
 
-      <div class="grid-item" id="tamernasser" value="asd">
+      <div class="grid-item" id="tamernasser">
         <a href="http://www.github.com/tamernasser">
           <img src="" alt="avatar" class="avatar">
         </a>
@@ -43,6 +43,7 @@
           <p></p>
         </div>
         <div class="avatarInfo">
+          <p></p>
           <p></p>
           <p></p>
         </div>
