adding the day time Related #5

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
 
 <head>
-
-
   <link rel="stylesheet" type="text/css" href="index.css">
   <title></title>
 </head>
@@ -12,11 +10,13 @@
 
   <nav>
     <div id="date">
+      <text id="day" rows="8" cols="80"></text>
+      <text id="time" rows="8" cols="80"></text>
     </div>
 
     <div id="weather">
       <label for="temp">Tempe.</label>
-      <text name="temp"id="temp"></text>
+      <text name="temp" id="temp"></text>
       <text>℃</text>
     </div>
 
@@ -53,6 +53,7 @@
   </div>
 
   <script src="./weather/weather.js"></script>
+  <script src="./date/date.js"></script>
 </body>
 
 </html>
