--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <script type='text/javascript' src='./github/config.js'></script>
+  <script type='text/javascript' src='./instagram/apigram.js'></script>
 <head>
   <link rel="stylesheet" type="text/css" href="index.css">
   <link rel="stylesheet" type="text/css" href="github/github.css">
@@ -30,16 +31,19 @@
 
 
   <div id="mainContainer">
-    <div id="userGmail" class="containerGmail">
-      <div id=login>
-        login
+
+    <div class="containerInstagram">
+      <div class="searchContainer">
+        <div>
+          
+        </div>
+        <div>
+
+        </div>
       </div>
-      <div id="userInfo">
-        user info
+      <div class="resultsContainer">
+
       </div>
-    </div>
-    <div id="userEmails" class="containerEmails">
-      useremails
     </div>
 
 
