Added elements for posts items

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <script type='text/javascript' src='./github/config.js'></script>
-  <script type='text/javascript' src='./instagram/apigram.js'></script>
+
 <head>
   <link rel="stylesheet" type="text/css" href="index.css">
   <link rel="stylesheet" type="text/css" href="github/github.css">
-
+  <link rel="stylesheet" type="text/css" href="instagram/instagram.css">
   <title></title>
 </head>
 
@@ -35,13 +35,50 @@
     <div class="containerInstagram">
       <div class="searchContainer">
         <div>
-          
+          <input type="text" id="inputHashtag" placeholder="Search..." name="hashtag">
         </div>
+          <input id="btnSearchHashtag" type="submit" value="Search">
         <div>
 
         </div>
       </div>
       <div class="resultsContainer">
+
+        <div class="resultsRow">
+          <div class="postItem">
+            <img src="" alt="">
+          </div>
+          <div class="postItem">
+            <img src="" alt="">
+          </div>
+          <div class="postItem">
+            <img src="" alt="">
+          </div>
+        </div>
+
+        <div class="resultsRow">
+          <div class="postItem">
+            <img src="" alt="">
+          </div>
+          <div class="postItem">
+            <img src="" alt="">
+          </div>
+          <div class="postItem">
+            <img src="" alt="">
+          </div>
+        </div>
+
+        <div class="resultsRow">
+          <div class="postItem">
+            <img src="" alt="">
+          </div>
+          <div class="postItem">
+            <img src="" alt="">
+          </div>
+          <div class="postItem">
+            <img src="" alt="">
+          </div>
+        </div>
 
       </div>
     </div>
@@ -81,6 +118,7 @@
   <script src="./weather/weather.js"></script>
   <script src="./date/date.js"></script>
   <script type="text/javascript" src="./github/github_api.js"></script>
+    <script type='text/javascript' src='./instagram/apigram.js'></script>
 </body>
 
 </html>
