--- a/index.html
+++ b/index.html
@@ -41,37 +41,37 @@
       <div class="resultsContainer">
         <div class="resultsRow">
           <div class="postItem">
-            <img src="" alt="">
+            <a href=""><img src="" alt=""></a>
           </div>
           <div class="postItem">
-            <img src="" alt="">
+            <a href=""><img src="" alt=""></a>
           </div>
           <div class="postItem">
-            <img src="" alt="">
-          </div>
-        </div>
-
-        <div class="resultsRow">
-          <div class="postItem">
-            <img src="" alt="">
-          </div>
-          <div class="postItem">
-            <img src="" alt="">
-          </div>
-          <div class="postItem">
-            <img src="" alt="">
+            <a href=""><img src="" alt=""></a>
           </div>
         </div>
 
         <div class="resultsRow">
           <div class="postItem">
-            <img src="" alt="">
+            <a href=""><img src="" alt=""></a>
           </div>
           <div class="postItem">
-            <img src="" alt="">
+            <a href=""><img src="" alt=""></a>
           </div>
           <div class="postItem">
-            <img src="" alt="">
+            <a href=""><img src="" alt=""></a>
+          </div>
+        </div>
+
+        <div class="resultsRow">
+          <div class="postItem">
+            <a href=""><img src="" alt=""></a>
+          </div>
+          <div class="postItem">
+            <a href=""><img src="" alt=""></a>
+          </div>
+          <div class="postItem">
+            <a href=""><img src="" alt=""></a>
           </div>
         </div>
 
