Added heart icons below photos for likes related #19

--- a/index.html
+++ b/index.html
@@ -41,37 +41,46 @@
       <div class="resultsContainer">
         <div class="resultsRow">
           <div class="postItem">
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="heart.png" alt="heartIcon"></p>
           </div>
           <div class="postItem">
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="heart.png" alt="heartIcon"></p>
           </div>
           <div class="postItem">
-            <a href=""><img src="" alt=""></a>
-          </div>
-        </div>
-
-        <div class="resultsRow">
-          <div class="postItem">
-            <a href=""><img src="" alt=""></a>
-          </div>
-          <div class="postItem">
-            <a href=""><img src="" alt=""></a>
-          </div>
-          <div class="postItem">
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="heart.png" alt="heartIcon"></p>
           </div>
         </div>
 
         <div class="resultsRow">
           <div class="postItem">
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="heart.png" alt="heartIcon"></p>
           </div>
           <div class="postItem">
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="heart.png" alt="heartIcon"></p>
           </div>
           <div class="postItem">
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="heart.png" alt="heartIcon"></p>
+          </div>
+        </div>
+
+        <div class="resultsRow">
+          <div class="postItem">
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="heart.png" alt="heartIcon"></p>
+          </div>
+          <div class="postItem">
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="heart.png" alt="heartIcon"></p>
+          </div>
+          <div class="postItem">
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="heart.png" alt="heartIcon"></p>
           </div>
         </div>
 
