--- a/index.html
+++ b/index.html
@@ -42,45 +42,45 @@
         <div class="resultsRow">
           <div class="postItem">
             <a href=""><img src="" alt="post"></a>
-            <p><img src="heart.png" alt="heartIcon"></p>
+            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
           </div>
           <div class="postItem">
             <a href=""><img src="" alt="post"></a>
-            <p><img src="heart.png" alt="heartIcon"></p>
+            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
           </div>
           <div class="postItem">
             <a href=""><img src="" alt="post"></a>
-            <p><img src="heart.png" alt="heartIcon"></p>
-          </div>
-        </div>
-
-        <div class="resultsRow">
-          <div class="postItem">
-            <a href=""><img src="" alt="post"></a>
-            <p><img src="heart.png" alt="heartIcon"></p>
-          </div>
-          <div class="postItem">
-            <a href=""><img src="" alt="post"></a>
-            <p><img src="heart.png" alt="heartIcon"></p>
-          </div>
-          <div class="postItem">
-            <a href=""><img src="" alt="post"></a>
-            <p><img src="heart.png" alt="heartIcon"></p>
+            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
           </div>
         </div>
 
         <div class="resultsRow">
           <div class="postItem">
             <a href=""><img src="" alt="post"></a>
-            <p><img src="heart.png" alt="heartIcon"></p>
+            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
           </div>
           <div class="postItem">
             <a href=""><img src="" alt="post"></a>
-            <p><img src="heart.png" alt="heartIcon"></p>
+            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
           </div>
           <div class="postItem">
             <a href=""><img src="" alt="post"></a>
-            <p><img src="heart.png" alt="heartIcon"></p>
+            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
+          </div>
+        </div>
+
+        <div class="resultsRow">
+          <div class="postItem">
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
+          </div>
+          <div class="postItem">
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
+          </div>
+          <div class="postItem">
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
           </div>
         </div>
 
