fix for nav bar + added bg img Related 16

--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
 
 
   <div class="body-container">
-    <div class="">
+    <div id="nav">
       <nav class="nav-container">
-        <div id="date">
-          <text id="day" rows="8" cols="80"></text>
-          <text id="time" rows="8" cols="80"></text>
-        </div>
         <div id="weather">
           <label for="temp">Temp.</label>
           <text name="temp" id="temp"></text>
@@ -26,6 +22,10 @@
         </div>
         <div id="contact">
           <a href="#contacts">Contacts</a>
+        </div>
+        <div id="date">
+          <text id="day" rows="8" cols="80"></text>
+          <text id="time" rows="8" cols="80"></text>
         </div>
       </nav>
     </div>
