Organized the code

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 <script type='text/javascript' src='./github/config.js'></script>
 
@@ -11,10 +13,8 @@
 </head>
 
 <body>
-
-
-
   <div class="body-container">
+
     <div id="nav">
       <nav class="nav-container">
         <div id="weather">
@@ -33,6 +33,7 @@
     </div>
 
     <div class="containerInstagram">
+
       <div class="searchContainer">
         <div>
           <input type="text" id="inputHashtag" value="" placeholder="Search..." name="hashtag">
@@ -41,23 +42,6 @@
       </div>
 
       <div class="resultsContainer">
-        <div class="resultsRow">
-          <div class="postItem">
-            <a href=""><img src="" alt="post"></a>
-            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
-            <p></p>
-          </div>
-          <div class="postItem">
-            <a href=""><img src="" alt="post"></a>
-            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
-            <p></p>
-          </div>
-          <div class="postItem">
-            <a href=""><img src="" alt="post"></a>
-            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
-            <p></p>
-          </div>
-        </div>
 
         <div class="resultsRow">
           <div class="postItem">
@@ -94,12 +78,31 @@
             <p></p>
           </div>
         </div>
+
+        <div class="resultsRow">
+          <div class="postItem">
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
+            <p></p>
+          </div>
+
+          <div class="postItem">
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
+            <p></p>
+          </div>
+
+          <div class="postItem">
+            <a href=""><img src="" alt="post"></a>
+            <p><img src="instagram/assets/icons/heart.png" alt="heartIcon"></p>
+            <p></p>
+          </div>
+        </div>
+
       </div>
-
     </div>
 
     <div id="contacts" class="contacts">
-
       <div class="grid-item" id="majdya">
         <a href="http://www.github.com/majdya"><img src="" alt="avatar" class="avatar"></a>
         <div class="avatarName">
@@ -134,8 +137,8 @@
 
 
 
-  <script src="./navBar/weather.js"></script>
-  <script src="./navBar/date.js"></script>
+  <script type="text/javascript" src="./navBar/weather.js"></script>
+  <script type="text/javascript" src="./navBar/date.js"></script>
   <script type="text/javascript" src="./github/github_api.js"></script>
   <script type='text/javascript' src='./instagram/apigram.js'></script>
 
