Added label to input

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="searchContainer">
         <div>
-          <input type="text" id="inputHashtag" value="" placeholder="Search..." name="hashtag">
+          <input type="text" label id="inputHashtag" value="" placeholder="Search..." name="hashtag">
         </div>
         <input id="btnSearchHashtag" type="submit" value="Search">
       </div>
