Added the search option

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
           <input type="text" id="inputHashtag" value="" placeholder="Search..." name="hashtag">
         </div>
         <input id="btnSearchHashtag" type="submit" value="Search">
+        <select>
+          <option value="top">Top</option>
+          <option value="recent">Recent</option>
+        </select>
       </div>
 
       <div class="resultsContainer">
