--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <input type="text" id="inputHashtag" value="" placeholder="Search..." name="hashtag">
         </div>
         <input id="btnSearchHashtag" type="submit" value="Search">
-        <select>
+        <select id="option">
           <option value="top">Top</option>
           <option value="recent">Recent</option>
         </select>
