Changed the title related #33

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html>
 <script type='text/javascript' src='./github/config.js'></script>
 
 <head>
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="github/github.css">
   <link rel="stylesheet" type="text/css" href="github/github.css">
   <link rel="stylesheet" type="text/css" href="instagram/instagram.css">
-  <title>Help Me Nigga</title>
+  <title>Hashtag Instagram</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
 
       <div class="searchContainer">
         <div>
-          <input type="text" label id="inputHashtag" value="" placeholder="Search..." name="hashtag">
+          <input type="text" id="inputHashtag" value="" placeholder="Search..." name="hashtag">
         </div>
         <input id="btnSearchHashtag" type="submit" value="Search">
         <select id="option">
