added label to the input

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
       <div class="searchContainer">
         <div>
-          <input type="text" id="inputHashtag" value="" placeholder="Search..." name="hashtag">
+          <label for="inputHashtag"></label>
+          <input type="text" id="inputHashtag" placeholder="Search..." name="hashtag">
         </div>
         <input id="btnSearchHashtag" type="submit" value="Search">
         <select id="option">
