Added label text

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="searchContainer">
         <div>
-          <label for="inputHashtag"></label>
+          <label class="lbl" for="inputHashtag">#</label>
           <input type="text" id="inputHashtag" placeholder="Search..." name="hashtag">
         </div>
         <input id="btnSearchHashtag" type="submit" value="Search">
